# cg-hw3-ssao-mentheque

./: .gitignore  README.md
src/App/: CMakeLists.txt  ColorButton.cpp  ColorButton.h  FpvCamera.cpp  FpvCamera.h  KeyPressContainer.cpp  KeyPressContainer.h  Lights.cpp  Lights.h  Model.cpp  Model.h  ScreenspacePipeline.cpp  ScreenspacePipeline.h  Values.h  Window.cpp  Window.h  projectionPointSearch.cpp  projectionPointSearch.h  resources.qrc  ssaoUniforms.cpp  ssaoUniforms.h  utils.cpp  utils.h
src/App/Models/: bl_subdivided_cube.glb  black_bottom_cone.glb  blender_no_projection.glb  blender_projection_to_one_side.glb  blender_sphere.glb  blender_yx.glb  blowfish2.glb  chess_2.glb  default_material_cube.glb  normal_map_test.glb
src/App/Shaders/: coneScaling.vert  diffuse.frag  diffuse.vert  gbuffModel.frag  gbuffShineThrough.frag  model.frag  model.vert  pointBlowout.vert  shineThrough.frag  ssDepthReading.frag  ssLighting.frag  ssLighting.vert  ssNormal.frag  ssOcclusionOrDiffuse.frag  ssSimple.frag  ssSimple.vert  ssSimpleBlur.frag  ssao.frag
